public/styles2.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@400;500&display=swap");

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  --background-color: #e5e9f5;
  --white-color: #121212;
  --clr-light-gray: rgb(196, 195, 196);
  --clr-dark: #363949;
  --login-slider: #4d4c7d;
  --orders: #fff;
  --orders-border: #f0f3f4;
  --map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7);

}
[data-theme="dark"] {
  --background-color: #222;
  --white-color: #ffff;
  --login-slider: #161616;
  --orders: #181818;
  --orders-border: #292929;
}
[data-theme="dark"] .dataTable-sorter::before {
  border-top: 4px solid #fff;
  opacity.0.5
}
[data-theme="dark"] .dataTable-sorter::after {
 border-bottom: 4px solid #fff;
  opacity.0.5
}
[data-theme="dark"] .dataTable-dropdown label{
  color: #fff;
}
[data-theme="dark"]  .map-tiles {
        filter:var(--map-tiles-filter, none);
	}

html {
  height: 100%;
  transition: all 0.5s ease;
}
body {
  font-family: "Manrope", sans-serif !important;
  position: relative;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  transition: all 0.5s ease;
}
/*Background pattern*/
.bg {
  background-image: url("./assets/images/pattern.jpg");
  background-size: 300px;
  background-position: center;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -1;
  opacity: 0.5;
}
.bg::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: var(--background-color);
  opacity: 0.5;
}
/*Star on Gihtub*/
.star {
  background-color: #373e47;
  color: #adbac7;
  border-color: rgba(205, 217, 229, 0.1);
  text-decoration: none;
  position: relative;
  bottom: 10px;
  right: 10px;
  z-index: 9999;
  transition: all 0.5s ease;
}
.star svg {
  transition: all 0.5s ease;
}
.star:hover {
  color: #fff;
}
.star:hover svg {
  fill: #fff;
}

/*Header*/
header {
  min-height: 100px;
  position: relative;
}

header img {
  width: 100%;
  height: auto;
  max-width: 200px;
}

/*Toggle */
.toggle.toggle--active {
  transform: translateX(calc(100% + 2px));
}
.toggle_container {
  position: absolute;
  top: 0;
  right: 0;
  padding: 10px;
}

.toggle_wrapper {
  margin-left: auto;
  width: 50px;
  height: 30px;
  background-color: #000;
  border-radius: 30px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 6px;
  cursor: pointer;
  display: flex;
  position: relative;
}
.toggle_wrapper i {
  width: 15px;
  height: 15px;
}
.toggle_wrapper i.fa-sun {
  color: #f0c419;
}
.toggle_wrapper i.fa-moon {
  color: #ede21b;
}

.toggle {
  position: absolute;
  left: 3px;
  height: 20px;
  width: 20px;
  border-radius: 50%;
  background-color: #fff;
  transition: transform 0.5s, background-color 0.5s;
  will-change: transform;
}

.logout {
  cursor: pointer;
  transition: all 0.5s ease;
}
.logout:hover {
  box-shadow: 0 0 10px 5px #ff4c4c;
}

/*End of toggle*/

.image-box {
  background-color: #fff;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  box-shadow: -5px 5px 0px 0px #ff1919, -10px 10px 0px 0px #ff4c4c,
    -15px 15px 0px 0px #ff7f7f, -20px 20px 0px 0px #ff9999,
    -25px 25px 0px 0px #ffcccc, -5px 5px 15px 5px rgba(0, 0, 0, 0);
}

.login-box {
  min-height: 65vh;
  height: 100%;
  border-radius: 20px;
  overflow: hidden;
}

.login-slider {
  background: var(--login-slider);
  transition: all 0.5s ease;
}

.login-form {
  background: var(--background-color);
  position: relative;
  transition: all 0.5s ease;
}
.login-form .loading {
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  height: 100%;
  transition: all 1.5s ease;
  pointer-events: none;
}
.login-form .loading.loading--active {
  opacity: 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: var(--white-color);
  color: var(--background-color);
  opacity: 0.9;
  z-index: 2;
  pointer-events: all;
}
.outer-results-container.fade-in {
  animation: fade-in 2s;
}
@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

#quote {
  font-size: 13px;
  padding: 25px;
}

.welcome-text {
  color: var(--white-color);
}

/*Swiper CSS*/
.swiper {
  width: 100%;
  height: 100%;
  min-height: 300px;
}

.swiper-slide {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 18px;
  font-weight: bold;
  color: #fff;
  text-transform: uppercase;
  border-radius: 10px;
}

.swiper-pagination-bullet {
  background: #fff;
}
.swiper-pagination-bullet.swiper-pagination-bullet-active {
  width: 12px;
  height: 12px;
}

/*Form*/

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus {
  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
}

label {
  display: block;
  position: relative;
  margin-bottom: 1em;
}
button,
input:not(.search-input) {
  display: block;
  width: 100%;
  height: 1.5em;
  padding: 1.25em 2.25em;
  margin: 0;
  font-size: 1em;
  border: 2px solid #ccc;
  border-radius: 2.5em;
  box-sizing: border-box;
  outline: none;
}
button {
  border: 0;
}
input + span {
  position: absolute;
  left: 0.75em;
  top: 0.5em;
  padding: 0 0.35em;
  background: #fff;
  border-radius: 20px;
  color: #ccc;
  line-height: 1.75em;
  transition: top 0.15s;
}
input:focus + span,
input:valid + span,
input.is-invalid + span {
  top: -0.75em;
  left: 1.35em;
  color: #bbb;
  font-size: 0.75em;
  letter-spacing: 1px;
}
input.is-invalid + span {
  color: #ff9494;
}
input:focus {
  border-color: #3a54aa;
}
input.is-invalid {
  border-color: #ff9494;
}
input:focus + span {
  color: #69c;
}
input:focus.is-invalid + span {
  color: #ff9494;
}
label i {
  position: absolute;
  right: 0.5em;
  top: 0.65em;
  color: #ccc;
  font-size: 1.25em;
  cursor: pointer;
  z-index: 1;
  visibility: visible;
  opacity: 1;
  transition: opacity 0.15s;
}

button {
  background: #3a54aa;
  color: #fff;
  line-height: 0;
  letter-spacine: 1px;
  transition: all 0.15s;
}
button:hover:not(:disabled),
button:focus:not(:disabled) {
  border-color: #fff;
  box-shadow: 0 0 8px 4px rgba(0, 64, 128, 0.25);
}
button:active:not(:disabled) {
  box-shadow: inset 0 0 8px 4px rgba(0, 0, 0, 0.25);
  line-height: 0.2;
}
button:disabled {
  background: #ccc;
  color: #fff;
  cursor: not-allowed;
}

/*Results*/
.welcome-text-name-container {
  background-color: var(--background-color);
  padding: 5px 30px;
  border-top-left-radius: 25px;
  border-top-right-radius: 25px;
  color: var(--white-color);
  transition: all 0.3s ease-in-out;
}

.results-container,
.table-container,
.bar-container {
  background-color: var(--background-color);
  transition: all 0.3s ease-in-out;
}
table tr,
table th,
table td {
  color: var(--white-color);
}
table#ordersTable {
  width: 100%;
  border-radius: 2rem;
  text-align: center;
  overflow-x: auto;
  padding: 1.8rem;
  border-collapse: separate !important;
}
table#ordersTable tbody td {
  height: 2.8rem;
  color: var(--white-color);
}
table#ordersTable tbody td:nth-child(5) {
  display: flex;
  align-items: center;
  justify-content: center;
}
table#ordersTable tbody td div {
  width: 20px;
  height: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background: green;
  padding: 12px;
  cursor: pointer;
}

/*Orders*/

.orders [class*="col-md-"] {
  border-radius: 20px;
  background: var(--orders);
  overflow: hidden;
  padding: 10px;
  border: 5px solid var(--orders-border);
}
.orders .col-md-3 > .icon {
  width: 60px;
  height: 60px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: var(--clr-light-gray);
  color: var(--clr-dark);
}
.orders .col-md-3 > .logo {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  position: relative;
  overflow: hidden;
}
.orders .col-md-3 > .logo img {
  position: absolute;
  inset: 0;
  height: 100%;
  object-fit: cover;
}
.orders .col-md-3 > .icon i {
  font-size: 1.3rem;
  color: var(--clr-dark);
  background-color: var(--clr-light-gray);
}
.orders div.info > h6 {
  font-weight: bold;
}
.orders div.info > p {
  font-size: 1.1rem;
  font-weight: bold;
  letter-spacing: 1px;
  color: var(--white-color);
}
.orders .first-order div.info > h6 {
  color: #7380ec;
}
.orders .last-order div.info > h6 {
  color: #ff7782;
}
.orders .total-order div.info > h6 {
  color: #746aaf;
}

.total-spending h6 {
  color: #41f1b6;
}

.total-tips h6 {
  color: #ff7300;
}
/*Map*/
.leaflet-popup-content {
  text-align: center;
}
.leaflet-popup-content p {
  margin: 10px 0;
}
.leaflet-marker-icon {
  border-radius: 50%;
}

/*Footer*/
.footer-text {
  display: inline-block;
  padding: 15px;
  background: #f2f2f2f2;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}
.footer-text {
  box-shadow: 5px 5px 0px 0px #289fed, 10px 10px 0px 0px #5fb8ff,
    15px 15px 0px 0px #a1d8ff, 20px 20px 0px 0px #cae6ff,
    25px 25px 0px 0px #e1eeff, 5px 5px 15px 5px rgba(0, 0, 0, 0);
}
.footer-text a {
  color: #000000;
  text-decoration: none;
}
.footer-text a:hover {
  text-decoration: underline;
}

@media (max-width: 380px) {
  .toggle_container {
    position: absolute;
    top: 80%;
    right: 50%;
    padding: 10px;
    transform: translate(50%, 50%);
  }
}

